--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "fontkit": "^2.0.4",
     "next": "14.2.12",
     "pdf-lib": "^1.17.1",
     "react": "^18",
